# django-query-string-parser

./: MANIFEST.in  PROJECT_SUMMARY.md  PUBLISHED.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: demo.py
src/django_query_parser/: __init__.py  parser.py
tests/: __init__.py  conftest.py  test_parser.py
